public_html/css/Reports.css
#report-name-placeholder
{
    font-weight: bold;
    text-align: center;
}

#term-placeholder
{
    font-style: italic;
    text-align: center;
    font-size: 17px;
}

.panel-body 
{
    background: white;
    position: relative;
    height: 100vh;
    width: 100%;
    overflow: auto;
}

div.dataTables_wrapper #detailed_report_table
{
    width: 1750px;
    margin: 0 auto;
}

div.dataTables_wrapper #quick_report_table
{
    width: 960px;
    margin: 0 auto;
}

div.dataTables_wrapper #financial_report_table
{
    width: 1540px;
    margin: 0 auto;
}

div.dataTables_wrapper #curriculum_report_table
{
    width: 1050px;
    margin: 0 auto;
}

div.dataTables_wrapper #initiative_report_table
{
    width: 6800px;
    margin: 0 auto;
}

div.dataTables_wrapper #school_and_system_report_table
{
    width: 1250px;
    margin: 0 auto;
}

th, 
td 
{ 
    white-space: nowrap; 
}

div.dataTables_wrapper 
{
    margin: 0 auto;
}
 
div.container 
{
    width: 100%;
}

